[gd_scene load_steps=6 format=3 uid="uid://dy3wv60dua1v5"]

[ext_resource type="Script" path="res://Objects/breakable_object.gd" id="1_px5gy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1ps4"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_418wy"]
size = Vector2(44, 42)

[sub_resource type="Animation" id="Animation_yonim"]
resource_name = "break"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f3vs6"]
_data = {
"break": SubResource("Animation_yonim")
}

[node name="BreakableObject" type="CharacterBody2D"]
script = ExtResource("1_px5gy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x1ps4")

[node name="BreakDetectionArea" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="BreakDetectionArea"]
shape = SubResource("RectangleShape2D_418wy")
debug_color = Color(0.498039, 0.580392, 0.0941176, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f3vs6")
}

[connection signal="area_entered" from="BreakDetectionArea" to="." method="_on_break_detection_area_area_entered"]
